--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,22 +8,28 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@hennge/vue3-pagination": "^1.0.17",
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "core-js": "^3.8.3",
+    "popper.js": "^1.16.1",
     "sweetalert2": "^11.7.32",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
+    "vuejs-paginate": "^2.1.0",
     "vuetify": "^3.3.22"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@beyonk/google-fonts-webpack-plugin": "^1.7.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass-loader": "^13.3.2"
   },
   "eslintConfig": {
     "root": true,
